operators/subscription/guacamole/base/filebrowser-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole-filebrowser
  template:
    metadata:
      labels:
        app: guacamole-filebrowser
    spec:
      serviceAccountName: guacamole-filebrowser
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: drive
              mountPath: /srv
            - name: fb-config
              mountPath: /database
      volumes:
        - name: drive
          persistentVolumeClaim:
            claimName: guacamole-drive-pvc
        - name: fb-config
          persistentVolumeClaim:
            claimName: guacamole-filebrowser-config-pvc
