operators/subscription/guacamole/base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: guacamole
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: guacamole-postgres
  template:
    metadata:
      labels:
        app: guacamole-postgres
    spec:
      serviceAccountName: guacamole-postgres
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: guacamole-postgres-pvc
        - name: initdb
          configMap:
            name: guacamole-postgres-initdb
