operators/subscription/guacamole/base/filebrowser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-filebrowser
  namespace: guacamole
spec:
  selector:
    app: guacamole-filebrowser
  ports:
    - port: 80
      targetPort: 8080
