operators/subscription/guacamole/base/guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - port: 8080
      targetPort: 8080
