operators/subscription/guacamole/base/guacd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    app: guacd
  ports:
    - port: 4822
      targetPort: 4822
