operators/subscription/guacamole/base/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole-nginx
  namespace: guacamole
spec:
  selector:
    app: guacamole-nginx
  ports:
    - port: 8080
      targetPort: 8080
