operators/subscription/guacamole/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app: guacamole-postgres
  ports:
    - port: 5432
      targetPort: 5432
